--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml">
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Dream Journal</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
