--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Dream Journal</title>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DESux-js.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CBVvHBor.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Ba6BCNgM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/JbcUVXmK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CxfMjxZB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DywqVBIy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BAnSMEr-.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.beQUrh9A.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C_x8RpkU.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D79otls8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C1FmrZbK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CWj6FrbW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ASrwIIbz.js">
@@ -22,15 +22,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_w89btn = {
+					__sveltekit_12rty0h = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DESux-js.js"),
-						import("/_app/immutable/entry/app.beQUrh9A.js")
+						import("/_app/immutable/entry/start.Ba6BCNgM.js"),
+						import("/_app/immutable/entry/app.D79otls8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
